profile and vehicle screens changes